//
//  TitleConstans.swift
//  Movies
//
//  Created by Olga Sabadina on 05.01.2024.
//

import UIKit

enum TitleConstants {
    // Title autorised
    static let logInButton = "LOG IN"
    static let signUpLabel = "You don't have an account? "
    static let logInLabel = "Do you already have account? "
    static let signUpButton = "SIGN UP"
    static let welcomeApp = "Welcome"
    static let eventDescriptionApp = "Millions of movies, TV shows and people to discover."
    static let email = "email"
    static let password = "password"
    static let service = "Movies"
    
    //AuthorizedManager
    static let profileCollection = "Users"
    static let errorInfo = "ErrorInfo"
    
    //Key UserDefaults
    static let uid = "UiD"
    static let userImage = "UserImage"
    static let userEmail = "userEmail"
    static let userPassword = "userPassword" 
}

