...
                              cornerRadius: 9,
                              tintColor: nil)
        }
        passwordTextField.addSequreAndClearButtons()
        emailNumberTextField.addEmailImageAndClearButton()
        emailNumberTextField.setActivityIndicator()
        passwordTextField.accessibilityIdentifier = "PasswordTF"
        emailNumberTextField.accessibilityIdentifier = "LoginTF"
    }
    
    private func setAuthorizedStack() {
        authorizedStack = UIStackView(arrangedSubviews: [emailNumberTextField,passwordTextField])
        authorizedStack.axis = .vertical
        authorizedStack.spacing = 40
...
